Better logs + fixed Date for clock server